# proxmon

./: .gitignore  BUILD_MUSL.md  CHANGELOG.md  CHANGES_SUMMARY.md  Cargo.toml  DISTRIBUTION.md  INSTALL.md  PUBLISHING.md  QUICK_START.md  README.md  SETUP.md  TESTING_RELEASE.md  WORKFLOW_FIX.md  config.example.yml  install.sh
.github/: RELEASE_SETUP.md
.github/workflows/: ci.yml  release.yml
src/: ansible.rs  app.rs  config.rs  main.rs  proxmox.rs  ui.rs
